--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-firebase/app": "~15.4.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@shopify/react-native-skia": "0.1.141",
     "expo": "~46.0.9",
     "expo-blur": "^11.2.0",
     "expo-splash-screen": "^0.16.2",
