--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~46.0.9",
     "expo-blur": "^11.2.0",
     "expo-linking": "~3.2.2",
+    "expo-location": "^14.3.0",
     "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.10.0",
@@ -27,12 +28,14 @@
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-maps": "^1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-dotenv": "^3.3.1"
   },
   "private": true
 }
